# sluice

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE-APACHE  README.md
.github/workflows/: ci.yml
crates/sluice-chunk/: Cargo.toml
crates/sluice-chunk/src/: lib.rs
crates/sluice-cli/: Cargo.toml
crates/sluice-cli/src/: main.rs  mount.rs
crates/sluice-cli/tests/: cli.rs
crates/sluice-core/: Cargo.toml
crates/sluice-core/src/: config.rs  error.rs  format.rs  id.rs  lib.rs
crates/sluice-crypto/: Cargo.toml
crates/sluice-crypto/src/: aead.rs  compress.rs  hash.rs  keys.rs  lib.rs  rng.rs
crates/sluice-engine/: Cargo.toml
crates/sluice-engine/src/: lib.rs  statcache.rs
crates/sluice-index/: Cargo.toml
crates/sluice-index/src/: lib.rs
crates/sluice-repo/: Cargo.toml
crates/sluice-repo/src/: lib.rs
crates/sluice-scan/: Cargo.toml
crates/sluice-scan/src/: lib.rs
crates/sluice-store/: Cargo.toml
crates/sluice-store/src/: lib.rs  local.rs  objstore.rs  pack.rs
