[package]
name = "sluice-chunk"
description = "FastCDC content-defined chunking and chunk identifiers for sluice."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]

[dev-dependencies]
proptest = { workspace = true }
