[package]
name = "sluice-cli"
description = "Command-line interface for sluice, the encrypted deduplicating backup tool."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "sluice"
path = "src/main.rs"

[dependencies]
sluice-core = { path = "../sluice-core" }
sluice-crypto = { path = "../sluice-crypto" }
sluice-engine = { path = "../sluice-engine" }
sluice-repo = { path = "../sluice-repo" }
sluice-store = { path = "../sluice-store" }
clap = { workspace = true }
tokio = { workspace = true }
rpassword = { workspace = true }
object_store = { workspace = true }
url = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
