[package]
name = "sluice-cli"
description = "Command-line interface for sluice, the encrypted deduplicating backup tool."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "sluice"
path = "src/main.rs"

[dependencies]
sluice-core = { path = "../sluice-core" }
sluice-crypto = { path = "../sluice-crypto" }
sluice-engine = { path = "../sluice-engine" }
sluice-repo = { path = "../sluice-repo" }
sluice-store = { path = "../sluice-store" }
clap = { workspace = true }
clap_complete = { workspace = true }
clap_mangen = { workspace = true }
tokio = { workspace = true }
rpassword = { workspace = true }
object_store = { workspace = true }
url = { workspace = true }
serde_json = { workspace = true }
libc = { workspace = true, optional = true }
fuser = { workspace = true, optional = true }

[features]
# Mount a snapshot as a read-only filesystem (`sluice mount`). Off by default so
# the standard build needs no system libraries; enabling it links libfuse.
fuse = ["dep:fuser", "dep:libc"]

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
