[package]
name = "sluice-core"
description = "Pure types, IDs, errors, and canonical format constants for sluice."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
ciborium = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
