[package]
name = "sluice-crypto"
description = "Cryptography for sluice: key hierarchy, AEAD, KDFs, and hashing."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
sluice-core = { path = "../sluice-core" }
blake3 = { workspace = true }
argon2 = { workspace = true }
getrandom = { workspace = true }
chacha20poly1305 = { workspace = true }
zstd = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true, features = ["derive"] }

[dev-dependencies]
proptest = { workspace = true }
