[package]
name = "sluice-engine"
description = "Backup/restore/verify/prune pipeline orchestration for sluice."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
sluice-core = { path = "../sluice-core" }
sluice-repo = { path = "../sluice-repo" }
sluice-store = { path = "../sluice-store" }
thiserror = { workspace = true }
filetime = { workspace = true }

[dev-dependencies]
sluice-crypto = { path = "../sluice-crypto" }
tokio = { workspace = true }
tempfile = { workspace = true }
