[package]
name = "sluice-engine"
description = "Backup/restore/verify/prune pipeline orchestration for sluice."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
sluice-core = { path = "../sluice-core" }
sluice-crypto = { path = "../sluice-crypto" }
sluice-repo = { path = "../sluice-repo" }
sluice-store = { path = "../sluice-store" }
thiserror = { workspace = true }
filetime = { workspace = true }
futures = { workspace = true }
globset = { workspace = true }
redb = { workspace = true }
serde = { workspace = true }

[target.'cfg(unix)'.dependencies]
rustix = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
object_store = { workspace = true }
