[package]
name = "sluice-index"
description = "Deduplication index (memtable, filters, redb cache, repo segments) for sluice."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
