[package]
name = "sluice-repo"
description = "Repository handle (init/open, save/load) for sluice."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
sluice-core = { path = "../sluice-core" }
sluice-chunk = { path = "../sluice-chunk" }
sluice-crypto = { path = "../sluice-crypto" }
sluice-store = { path = "../sluice-store" }
serde = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
