[package]
name = "sluice-store"
description = "Storage backends (local, S3-compatible, WORM) and packer for sluice."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
sluice-core = { path = "../sluice-core" }
async-trait = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util"] }

[dev-dependencies]
tempfile = { workspace = true }
